# premint-camera-demo

./: .env.example  create_premint_webcam.py
js_web/: .env  .gitignore  package.json  premint.ts  preminter_contract.abi.json  tsconfig.json
js_web/src/components/: CameraRoll.tsx  ConnectWallet.module.css  ConnectWallet.tsx  FancyButton.module.css  FancyButton.tsx  MintPremint.module.css  MintPremint.tsx  PhotoButton.tsx  SwitchCamera.tsx
js_web/src/pages/: _app.tsx  global.css  index.module.css  index.tsx
js_web/src/pages/api/: store.ts
py_server/: create_premint_webcam.py  pyproject.toml
